--- a/src/index.css
+++ b/src/index.css
@@ -269,7 +269,88 @@ textarea {
   font-size: 18px;
   margin-left: 20px;
 }
+.success {
+  font-size: 20px;
+}
 /* End of contact page */
+
+/* About Page */
+.about {
+  background-color: #55574d;
+  margin-top: 9rem;
+  display: flex;
+  flex-direction: column;
+}
+.about-img {
+  margin-top: 3rem;
+}
+.about-img > img {
+  width: 90%;
+  display: block;
+  margin: 0 auto;
+}
+.about-text {
+  margin: 5rem auto;
+  text-align: left;
+  color: white;
+  font-family: "Merriweather", serif;
+  width: 90%;
+}
+/* End of About Page */
+
+/* Services Page */
+.services-page {
+  margin-top: 7rem;
+  color: white;
+  text-align: center;
+  background-color: #55574d;
+  font-family: "Merriweather", serif;
+}
+.service-p {
+  width: 90%;
+  margin: 0 auto;
+}
+.service-list {
+  background-color: black;
+  padding-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+.service-title {
+  margin-bottom: 1rem;
+}
+.service-button {
+  border: 2px solid white;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-weight: bold;
+  width: 80%;
+  margin: 6px auto;
+  transition: background-color 0.5s ease;
+  transition: color 0.5s ease;
+}
+.service-button:hover {
+  cursor: pointer;
+  color: black;
+  background-color: white;
+}
+#makeup,
+#facial-waxing,
+#body-waxing,
+#brow-tinting,
+#facials {
+  padding: 2rem 0;
+}
+.link:hover {
+  color: rgb(156, 202, 243);
+}
+#facial-waxing,
+#brow-tinting {
+  background-color: black;
+}
+/* End of Services Page */
 
 /* Desktop */
 @media screen and (min-width: 600px) {
@@ -323,6 +404,45 @@ textarea {
   }
   .hours-table {
     justify-content: center;
+  }
+  .about {
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 6rem;
+  }
+  .about-img {
+    margin: 3rem 5rem 3rem 0;
+  }
+  .about-img > img {
+    height: 600px;
+    width: 100%;
+  }
+  .about-text {
+    width: 30%;
+    margin: 5rem 5rem 5rem 0;
+    text-align: left;
+  }
+  .service-button {
+    width: 50%;
+    margin: 1rem auto;
+  }
+  .service-title {
+    font-size: 42px;
+  }
+  .service-info-wrapper {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    padding-bottom: 5rem;
+  }
+  .service-info {
+    width: 50%;
+    margin-right: 5rem;
+    text-align: left;
+  }
+  .booking {
+    width: 25%;
+    margin-right: 5rem;
   }
 }
 /* End of Desktop */
